--- a/KopirovanieUdajov/.gitignore
+++ b/KopirovanieUdajov/.gitignore
@@ -10,3 +10,6 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Custom settings (bad practice, should be some properties file application.conf and custom overrides in custom.conf)
+src/main/CustomSettings.java
