--- a/migracia/.gitignore
+++ b/migracia/.gitignore
@@ -13,3 +13,4 @@ hs_err_pid*
 
 # Custom settings (bad practice, should be some properties file application.conf and custom overrides in custom.conf)
 src/main/CustomKonstanty.java
+bin/
