--- a/Frisbee/Frisbee/custom_settings.py.template
+++ b/Frisbee/Frisbee/custom_settings.py.template
@@ -1,6 +1,18 @@
 # Database
 # https://docs.djangoproject.com/en/1.8/ref/settings/#databases
 
+import os
+
+PROJECT_DIR = os.path.abspath(os.path.dirname(__file__))
+DATABASES = {
+    'default': {
+        'ENGINE': 'django.db.backends.sqlite3',
+        'NAME': os.path.join(PROJECT_DIR, 'frisbee'),
+    }
+}
+
+# or something like this
+
 DATABASES = {
     'default':{
         'ENGINE':'django.db.backends.mysql',
